// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryTable component snapshot history table data (from bulkManagementHistory.map(this.formatHistoryRow) snapshot: maps resultsSummay to ResultsSummary, wraps filename and user, forwards the rest 1`] = `
[
  {
    "filename": <span
      className="wrap-text-in-cell"
    >
      blue.png
    </span>,
    "resultsSummary": <ResultsSummary
      courseId="Da Bu Dee"
      rowId={12}
      text="Da ba daa"
    />,
    "timeUploaded": "65",
    "user": <span
      className="wrap-text-in-cell"
    >
      Eifel
    </span>,
  },
  {
    "filename": <span
      className="wrap-text-in-cell"
    >
      allStar.jpg
    </span>,
    "resultsSummary": <ResultsSummary
      courseId="rockstar"
      rowId={2}
      text="all that glitters is gold"
    />,
    "timeUploaded": "2000s?",
    "user": <span
      className="wrap-text-in-cell"
    >
      Smashmouth
    </span>,
  },
]
`;

exports[`HistoryTable component snapshot snapshot - loads formatted table 1`] = `
<DataTable
  className="table-striped"
  columns={
    [
      {
        "Header": "Gradebook",
        "accessor": "filename",
        "columnSortable": false,
        "width": "col-5",
      },
      {
        "Header": "Download Summary",
        "accessor": "resultsSummary",
        "columnSortable": false,
        "width": "col",
      },
      {
        "Header": "Who",
        "accessor": "user",
        "columnSortable": false,
        "width": "col-1",
      },
      {
        "Header": "When",
        "accessor": "timeUploaded",
        "columnSortable": false,
        "width": "col",
      },
    ]
  }
  data={
    [
      {
        "filename": <span
          className="wrap-text-in-cell"
        >
          blue.png
        </span>,
        "resultsSummary": <ResultsSummary
          courseId="Da Bu Dee"
          rowId={12}
          text="Da ba daa"
        />,
        "timeUploaded": "65",
        "user": <span
          className="wrap-text-in-cell"
        >
          Eifel
        </span>,
      },
      {
        "filename": <span
          className="wrap-text-in-cell"
        >
          allStar.jpg
        </span>,
        "resultsSummary": <ResultsSummary
          courseId="rockstar"
          rowId={2}
          text="all that glitters is gold"
        />,
        "timeUploaded": "2000s?",
        "user": <span
          className="wrap-text-in-cell"
        >
          Smashmouth
        </span>,
      },
    ]
  }
  hasFixedColumnWidths={true}
  itemCount={2}
/>
`;
